# HDA_activity_recognition

./: .gitignore  README.md  pyproject.toml
activity_recognition/: dataset.py  tools.py
activity_recognition/utils/: CSI_doppler_create_dataset_test.py  CSI_network.py  CSI_network_test.py  dataset_utility.py  plots_utility.py
notebook/: 00_load_data.ipynb
tests/: test_tools.py
