[tool.poetry]
name = "activity-recognition"
version = "0.1.0"
description = ""
authors = ["Mattia Piazza"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
numpy = "< 1.20"
pandas = "< 3"
scipy = "<1.12.0"
tensorflow = "2.6.0"
osqp = "^0.6.5"
matplotlib = "<3.8.3"
rich = "^13.7.0"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]
